Closed
Bug 1222308
Opened 5 years ago
Closed 5 years ago
Drop frame IDs from mFrameIDsNotYetComposited when they get too old
Categories
(Core :: Audio/Video: Playback, defect)
Core
Audio/Video: Playback
Tracking
()
People
(Reporter: roc, Assigned: roc)
References
Details
Attachments
(1 file, 2 obsolete files)
40 bytes,
text/x-review-board-request
|
nical
:
review+
lizzard
:
approval-mozilla-aurora+
lizzard
:
approval-mozilla-beta+
|
Details |
Randell found this. If you leave a video hidden for a long time, ImageContainer::mFrameIDsNotYetComposited grows and grows because it contains the IDs of all frames that were sent to the compositor but have not yet been composited. Normally NotifyCompositeInternal would detect that those frames have been skipped and clean up the array, but if the tab remains hidden then that code will never run. When it *does* run, it takes O(N^2) time, which can hang everything.
Assignee | ||
Comment 1•5 years ago
|
||
Bug 1222308. Assume frames that are very old will never be composited. r=nical This also makes NotifyCompositeInternal take O(N) time in the length of mFrameIDsNotYetComposited instead of O(N^2).
Attachment #8684014 -
Flags: review?(nical.bugzilla)
Comment 2•5 years ago
|
||
STR: go to https://mozilla.github.com/webrtc-landing/pc_test.html, and Start. Scroll it so the videos are off-screen. Walk away for several hours. come back, scroll up.
Updated•5 years ago
|
Attachment #8684014 -
Flags: review?(nical.bugzilla) → review+
Comment 3•5 years ago
|
||
Comment on attachment 8684014 [details] MozReview Request: Bug 1222308. Assume frames that are very old will never be composited. r=nical https://reviewboard.mozilla.org/r/24473/#review22001
Assignee | ||
Comment 4•5 years ago
|
||
Bug 1092626. Add aInterrupted parameter to ReflowFinished. r=mats
Attachment #8684511 -
Flags: review?(mats)
Assignee | ||
Comment 5•5 years ago
|
||
Bug 1092626. When a reflow is interrupted and a scroll position is clamped, try to restore to the old scroll position when the reflow completes. r=mats
Attachment #8684512 -
Flags: review?(mats)
Assignee | ||
Updated•5 years ago
|
Attachment #8684511 -
Attachment is obsolete: true
Attachment #8684511 -
Flags: review?(mats)
Assignee | ||
Updated•5 years ago
|
Attachment #8684512 -
Attachment is obsolete: true
Attachment #8684512 -
Flags: review?(mats)
Assignee | ||
Comment 6•5 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/d907f1abdcf6f705e2554399218fe010a6b151a8 Bug 1222308. Assume frames that are very old will never be composited. r=nical
Assignee | ||
Updated•5 years ago
|
Assignee: nobody → roc
Assignee | ||
Comment 7•5 years ago
|
||
Comment on attachment 8684014 [details] MozReview Request: Bug 1222308. Assume frames that are very old will never be composited. r=nical Approval Request Comment [Feature/regressing bug #]: 1143575 [User impact if declined]: OOM/hang if a video played for a long time while not visible [Describe test coverage new/current, TreeHerder]: video playback code is pretty well tested, although playback of hidden videos is not [Risks and why]: low risk; simple change with small scope [String/UUID change made/needed]: none
Attachment #8684014 -
Flags: approval-mozilla-beta?
Attachment #8684014 -
Flags: approval-mozilla-aurora?
Comment 8•5 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/d907f1abdcf6
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla45
Tracking since this is a recent regression (from 42)
status-firefox42:
--- → affected
status-firefox43:
--- → affected
status-firefox44:
--- → affected
tracking-firefox43:
--- → +
tracking-firefox44:
--- → +
tracking-firefox45:
--- → +
Comment on attachment 8684014 [details] MozReview Request: Bug 1222308. Assume frames that are very old will never be composited. r=nical Fix for a video playback hang, OK to uplift to aurora and beta.
Attachment #8684014 -
Flags: approval-mozilla-beta?
Attachment #8684014 -
Flags: approval-mozilla-beta+
Attachment #8684014 -
Flags: approval-mozilla-aurora?
Attachment #8684014 -
Flags: approval-mozilla-aurora+
Comment 11•5 years ago
|
||
bugherderuplift |
https://hg.mozilla.org/releases/mozilla-aurora/rev/41043b5b5b56
Assignee | ||
Comment 12•5 years ago
|
||
Is there a reason why you didn't uplift to beta?
Flags: needinfo?(cbook)
Comment 13•5 years ago
|
||
bugherderuplift |
https://hg.mozilla.org/releases/mozilla-b2g44_v2_5/rev/41043b5b5b56
status-b2g-v2.5:
--- → fixed
Comment 14•5 years ago
|
||
bugherderuplift |
https://hg.mozilla.org/releases/mozilla-beta/rev/8c199302644e
Comment 15•5 years ago
|
||
(In reply to Robert O'Callahan (:roc) (Mozilla Corporation) from comment #12) > Is there a reason why you didn't uplift to beta? sorry was baking that patch back one day on aurora to make sure nothing brakes
Flags: needinfo?(cbook)
Assignee | ||
Comment 16•5 years ago
|
||
No problem --- just wanted to make sure it wasn't waiting on something from me.
You need to log in
before you can comment on or make changes to this bug.
Description
•