Bug 1222308 - Assume frames that are very old will never be composited. r=nical, a=lizzard

This also makes NotifyCompositeInternal take O(N) time in the length of
mFrameIDsNotYetComposited instead of O(N^2).

--HG--
extra : source : d907f1abdcf6f705e2554399218fe010a6b151a8
extra : intermediate-source : 41043b5b5b5607ad2d4d1abdf3c208e352cf7c19